<resources>
    <string name="app_name">Urovo Ring Connection</string>

    <!-- Settings Activity Title -->
    <string name="title_activity_settings">Settings</string>

    <string name="no_bluetooth_adapter_key">bluetooth_not_available</string>
    <string name="no_bluetooth_adapter_title">Bluetooth not available</string>
    <string name="no_bluetooth_adapter_summary">Device does not have Bluetooth adapter or Bluetooth not available. You cannot connect to Urovo Ring scanner.</string>

    <string name="bluetooth_off_key">bluetooth_off</string>
    <string name="bluetooth_off_title">Bluetooth turned off</string>
    <string name="bluetooth_off_summary">Bluetooth adapter turned off. Turn on Bluetooth on device to setup connection.</string>

    <!-- Preference Titles -->
    <string name="connection_header">Connection</string>
    <string name="service_settings_header">Service</string>
    <string name="barcode_transfer_header">Barcode processing</string>

    <!-- Connection Preferences -->
    <string name="bluetooth_on_key">keep_bluetooth_on</string>
    <string name="connect_to_device_key">device_to_connect</string>
    <string name="bluetooth_on_title">Keep Bluetooth on</string>
    <string name="bluetooth_on_summary">Automatically turn Bluetooth on if needed to connect to Urovo ring scanner.</string>
    <string name="connect_to_device_title">Connect to</string>
    <string name="connect_to_device_summary">Select Urovo ring scanner to connect to from paired Bluetooth devices.</string>

    <!-- Service Preferences -->
    <string name="service_boot_start_key">service_boot_start</string>
    <string name="service_app_start_key">service_app_start</string>
    <string name="service_management_key">service_management</string>
    <string name="service_boot_start_title">Start on boot</string>
    <string name="service_boot_start_summary">Automatically start service after device boot.</string>
    <string name="service_app_start_title">Start from application</string>
    <string name="service_app_start_summary">Automatically start service when application running.</string>
    <string name="service_management_title">Service management</string>
    <string name="button_start_service">Start</string>
    <string name="button_stop_service">Stop</string>

    <!-- Barcode Preferences -->
    <string name="broadcast_messages_key">use_broadcast_messages</string>
    <string name="intent_action_key">intent_action</string>
    <string name="intent_barcode_data_key">intent_barcode_data</string>
    <string name="clipboard_paste_key">paste_to_clipboard</string>
    <string name="broadcast_messages_title">Broadcast messages</string>
    <string name="broadcast_messages_summary">Use broadcast messages to send barcode to other application.</string>
    <string name="intent_action_title">Intent action</string>
    <string name="intent_action_summary">String to identify broadcast message with barcode data.</string>
    <string name="intent_data_title">Intent barcode data</string>
    <string name="intent_data_summary">String to identify data field in Intent with barcode.</string>
    <string name="clipboard_paste_title">Clipboard</string>
    <string name="clipboard_paste_summary">Paste scanned barcode to clipboard.</string>

    <!-- Connection Service -->
    <string name="service_running_title">Service running</string>
    <string name="service_running_descrition">Service successfully running</string>
    <string name="service_bluetooth_disabled_title">Bluetooth not available</string>
    <string name="service_bluetooth_disabled_description">Device does not have Bluetooth adapter or Bluetooth not available. This device cannot connect to Urovo ring scanner.</string>
    <string name="service_bluetooth_off_title">Bluetooth is off</string>
    <string name="service_bluetooth_off_description">Bluetooth adapter turned off. Turn on Bluetooth on device or set "Keep Bluetooth on" on settings screen.</string>
    <string name="service_device_not_selected_title">Urovo ring not selected</string>
    <string name="service_device_not_selected_description">Urovo ring to connect to not selected. Select Urovo ring to connect on settings screen.</string>
    <string name="service_disconnected_title">Urovo ring disconnected</string>
    <string name="service_disconnected_description">Urovo ring %s disconnected, waiting for connection…</string>
    <string name="service_connected_title">Connected to Urovo ring</string>
    <string name="service_connected_description">Connected to Urovo ring %s</string>
    <string name="service_connected_last_barcode">%s</string>
</resources>